# ssd_mobilenet_tflite_orj

./: CMakeLists.txt  README.md
src/: main.cpp  ssd_mobilenet_tflite.cpp  ssd_mobilenet_tflite.h
